kubernetes/deploy/homer/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: homer
spec:
  internalTrafficPolicy: Cluster
  ports:
  - name: http
    port: 8080
    protocol: TCP
    targetPort: http
  selector:
    app: homer
    release: homer
  type: ClusterIP
