kubernetes/deploy/homer/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: traefik-internal
  name: homer
spec:
  rules:
  - host: dashboard.vandeneede.org
    http:
      paths:
      - backend:
          service:
            name: homer
            port:
              name: http
        path: /
        pathType: ImplementationSpecific
